# disciplined-process-plugin

./: .gitignore  CLAUDE.md  README.md  disciplined-process-plugin-v2-specification.md
.beads/: issues.jsonl
disciplined-process-plugin/: .mcp.json  README.md  pyproject.toml
disciplined-process-plugin/.claude-plugin/: plugin.json
disciplined-process-plugin/agents/: adversary.md  code-reviewer.md
disciplined-process-plugin/assets/templates/: CLAUDE.md  adr-0001-adopt-disciplined-process.md  adr-template.md  code-review.md  dp-config-v2.yaml  dp-config.yaml  spec-overview.md
disciplined-process-plugin/commands/: adr.md  health.md  help.md  init.md  migrate.md  repair.md  reset.md  review.md  session.md  spec.md  status.md  task.md  trace.md  unlock.md  verify.md
disciplined-process-plugin/docs/adr/: 0001-goal-backward-verification.md
disciplined-process-plugin/docs/spec/: 00-overview.md  01-task-tracking.md  02-specifications.md  03-architecture-decisions.md  04-code-review.md  05-verification.md  06-plan-validation.md
disciplined-process-plugin/examples/: adversarial-review-workflow.md  basic-feature-workflow.md  chainlink-session-workflow.md  migration-workflow.md
disciplined-process-plugin/hooks/: hooks.json
disciplined-process-plugin/references/: enforcement-config.md  workflow.md
disciplined-process-plugin/scripts/: adversarial_review.py  check-trace-markers.sh  init_wizard.py  migrate.py  post_edit.py  post_write.py  pre-commit-check.sh  pre-push-sync.sh  pre_commit.py  pre_edit.py  pre_push.py  prompt_guard.py  session-start.sh  session_start.py  stop_handler.py  traceability.py
disciplined-process-plugin/scripts/lib/: __init__.py  builtin_provider.py  config.py  degradation.py  plan_validation.py  providers.py  verification.py
disciplined-process-plugin/skills/adr-authoring/: SKILL.md
disciplined-process-plugin/skills/disciplined-workflow/: SKILL.md
disciplined-process-plugin/skills/spec-tracing/: SKILL.md
disciplined-process-plugin/tests/: __init__.py  conftest.py  test_adversarial_review.py  test_builtin_provider.py  test_hooks_prompt_guard.py  test_hooks_session_start.py  test_init_wizard.py  test_integration_e2e.py  test_lib_config.py  test_lib_degradation.py  test_lib_plan_validation.py  test_lib_providers.py  test_lib_verification.py  test_migrate.py  test_traceability.py
(+4 files in other folders)
